Fix bug which reorders incrTest7h incorrectly